--- a/_config.yml
+++ b/_config.yml
@@ -3,20 +3,11 @@ description: | # 头像背后的信息（html格式），<br/>代表换行
   SYSU第6年<br/>
   水野爱<br/>
   田宫例四驱车<br/>
-  <a href="mailto:i@wu-kan.cn">
+  <a href="mailto:ignaziop@duck.com">
     <i class="fa-solid fa-envelope"></i>
   </a>
-  <a href="https://github.com/wu-kan">
+  <a href="https://github.com/1gnazio">
     <i class="fa-brands fa-github"></i>
-  </a>
-  <a href="https://vjudge.net/user/WuK">
-    <i class="fa-solid fa-smile"></i>
-  </a>
-  <a href="https://space.bilibili.com/166390020">
-    <i class="fa-brands fa-bilibili"></i>
-  </a>
-  <a href="https://www.zhihu.com/people/wu.kan/activities">
-    <i class="fa-brands fa-zhihu"></i>
   </a>
   <br/>
 url: https://wu-kan.cn # 你的域名，例如 https://wu-kan.github.io
@@ -176,16 +167,16 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                   <i class="fa-solid fa-cog fa-spin fa-fw"></i>
                   <span id="run_time_day">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>天
+                  </span>
                   <span id="run_time_hour">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>时
+                  </span>
                   <span id="run_time_minute">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>分
+                  </span>
                   <span id="run_time_second">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>秒
+                  </span>
                   <script>
                     setInterval(function (d,h,m,s,b) {
                       function setzero(i) {
