--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Ignazio's notes" # 站点标题
-description: | # 头像背后的信息（html格式），<br/>代表换行
+title: Ignazio's Notes
+description: | # 头像背后的信息（html格式），<br/>代表换
   <br/>
  <br/>
 br/>
@@ -11,7 +11,7 @@ br/>
   </a>
   <br/>
 url:  # 你的域名，例如 https://wu-kan.github.io
-baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
+baseurl: "1gnazio.github.io" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
 defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/front-matter-defaults/>功能进行配置
   - scope:
