--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,26 @@
-title: Ignazio's Notes
-description: | # 头像背后的信息（html格式），<br/>代表换
-  <br/>
- <br/>
-br/>
-  <a href="mailto:ignaziop@duck.com">
+title: welcome # 站点标题
+description: | # 头像背后的信息（html格式），<br/>代表换行
+  SYSU第6年<br/>
+  水野爱<br/>
+  田宫例四驱车<br/>
+  <a href="mailto:i@wu-kan.cn">
     <i class="fa-solid fa-envelope"></i>
   </a>
   <a href="https://github.com/1gnazio">
     <i class="fa-brands fa-github"></i>
   </a>
+  <a href="https://vjudge.net/user/WuK">
+    <i class="fa-solid fa-smile"></i>
+  </a>
+  <a href="https://space.bilibili.com/166390020">
+    <i class="fa-brands fa-bilibili"></i>
+  </a>
+  <a href="https://www.zhihu.com/people/wu.kan/activities">
+    <i class="fa-brands fa-zhihu"></i>
+  </a>
   <br/>
-url:  # 你的域名，例如 https://wu-kan.github.io
-baseurl: "1gnazio.github.io" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
+url: https://1gnazio.github.io # 你的域名，例如 https://wu-kan.github.io
+baseurl: "" # 假如你的博客是建在某个目录下的，请在这里加上目录名，并且下面配置的所有链接里的`/assets`前也要加，即`/your_baseurl/assets`。这一项结尾不要有'/'。
 
 defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/front-matter-defaults/>功能进行配置
   - scope:
@@ -33,22 +42,22 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
             theme-base: theme-base-07 # 可选的主题色包括08~0f，见 <https://github.com/poole/lanyon>
             layout-reverse: true # 开启后sidebar在右边，反之左边
             sidebar-overlay: true # 开启后正文不随sidebar移动而移动
-          html_lang: en # <https://www.w3school.com.cn/tags/html_ref_language_codes.asp>
+          html_lang: zh # <https://www.w3school.com.cn/tags/html_ref_language_codes.asp>
           sidebar: # 此配置项下是一些关于侧边栏的配置
             disable: false # 是否不显示sidebar
             avatar: # 侧边栏显示的头像
               enable: true
               img: https://gravatar.loli.net/avatar/289efba375d63424de3c49569c446744?s=320 # 头像的地址
             nav: # 导航部分的内容，你也可以自己增加文字、图标（来自fontawesome）和对应的链接
-              - title: '<i class="fa-solid fa-home fa-fw"></i> Home'
+              - title: '<i class="fa-solid fa-home fa-fw"></i> 首页'
                 href: /
-              - title: '<i class="fa-solid fa-comment fa-fw"></i> Comments'
+              - title: '<i class="fa-solid fa-comment fa-fw"></i> 留言'
                 href: /comments/
-              - title: '<i class="fa-solid fa-archive fa-fw"></i> Index'
+              - title: '<i class="fa-solid fa-archive fa-fw"></i> 归档'
                 href: /archive/
-              - title: '<i class="fa-solid fa-tags fa-fw"></i> Topics'
+              - title: '<i class="fa-solid fa-tags fa-fw"></i> 标签'
                 href: /tags/
-              - title: '<i class="fa-solid fa-coffee fa-fw"></i> Buy me a Coffee'
+              - title: '<i class="fa-solid fa-coffee fa-fw"></i> 打赏'
                 href: /merger/
             simple_jekyll_search: # 侧边栏的全站搜索
               enable: true
@@ -71,7 +80,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                 </style>
                 <input
                   id="sidebar-search-input"
-                  placeholder="Search"
+                  placeholder="搜索博文"
                 />
                 <ol
                   id="sidebar-search-results-container"
@@ -167,16 +176,16 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                   <i class="fa-solid fa-cog fa-spin fa-fw"></i>
                   <span id="run_time_day">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>
+                  </span>天
                   <span id="run_time_hour">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>
+                  </span>时
                   <span id="run_time_minute">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>
+                  </span>分
                   <span id="run_time_second">
                     <i class="fa-solid fa-spinner fa-pulse"></i>
-                  </span>
+                  </span>秒
                   <script>
                     setInterval(function (d,h,m,s,b) {
                       function setzero(i) {
@@ -205,7 +214,7 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
                     document.getElementById("run_time_hour"),
                     document.getElementById("run_time_minute"),
                     document.getElementById("run_time_second"),
-                    "12/30/2022 11:03:56")// 这是我第一篇CSDN博客的时间
+                    "10/04/2017 11:03:56")// 这是我第一篇CSDN博客的时间
                   </script>
                 </div>
               - | # 不蒜子页面统计，看不懂可不改
@@ -243,11 +252,24 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
               - | # Copyright声明
                 <div>
                   <i class="fa-solid fa-copyright fa-fw"></i>
-                  2022-2023 Ignazio P
+                  2017-2022 WuK
                 </div>
-               
+              - | # 我的备案信息，请你的网站删掉这一项。互联网非法外之地！
+                <div>
+                  <i class="fa-solid fa-info-circle fa-fw"></i>
+                  <a href="http://beian.miit.gov.cn">
+                    粤ICP备 20024947号
+                  </a>
+                </div>
+              - | # 公安网备信息
+                <div>
+                  <img src="https://Mizuno-Ai.wu-kan.cn/assets/image/2021/12/07/0.png" class="fa-fw"></img>
+                  <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=34070202000407">
+                    皖公网安备 34070202000407号
+                  </a>
+                </div>
             wordcount: # 全站字数统计
-              enable: true # 本地调试时建议关闭，非常影响站点生成速度（所需时间与博文数量的平方成正比）
+              enable: false # 本地调试时建议关闭，非常影响站点生成速度（所需时间与博文数量的平方成正比）
               prepend: <i class="fa-solid fa-user-edit fa-fw"></i>
               kilo: 千
               unit: 字
@@ -638,8 +660,8 @@ defaults: # 将所有配置选项使用<https://jekyllrb.com/docs/configuration/
           append_to_head:
             - | # 需要配置的变量见<https://merger.justhx.com/cn/docs/configure>
               <script>
-                var myname = "WuK";
-                var profile = "i@wu-kan.cn";
+                var myname = "Ignazio P";
+                var profile = "ignaziop@duck.com";
                 var usage = "payment";
                 var wechat = "wxp://f2f0BhUoIC_9gex7-tC2PRvVuoA486mK5WyC";
                 var tenpay = "https://i.qianbao.qq.com/wallet/sqrcode.htm?m=tenpay&f=wallet&a=1&ac=CAEQ77zFwQMY-6u57gU%3D_xxx_sign&u=942759535&n=%E8%94%9A";
@@ -741,7 +763,7 @@ webmaster_verifications: # <https://jekyll.github.io/jekyll-seo-tag/usage/>
   baidu: szbTSfUGAB
 
 permalink: pretty
-# timezone: Asia/Shanghai # 解决githubpage显示时间不正确的问题，见<https://www.iana.org/time-zones>
+timezone: Eastern Standard Time
 future: true # 允许发布时间在未来的文章
 
 # limit_posts: 999 # 限制博文数量
